google ads script

--- a/public/privacy-policy.html
+++ b/public/privacy-policy.html
@@ -6,6 +6,8 @@
       <title>Wav2Ogg Privacy Policy</title>
       <link rel="stylesheet" href="styles.css">
       <link rel="icon" href="./icon.png" type="image/png">
+      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6600000832433063"
+     crossorigin="anonymous"></script>
    </head>
    <body>
       <header>
