--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,22 @@
           <a id="download" class="" style="display: none">Download OGG</a>
         </div>
       </section>
+      <script
+        async
+        src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6600000832433063"
+        crossorigin="anonymous"
+      ></script>
+      <ins
+        class="adsbygoogle"
+        style="display: block; text-align: center"
+        data-ad-layout="in-article"
+        data-ad-format="fluid"
+        data-ad-client="ca-pub-6600000832433063"
+        data-ad-slot="3430558984"
+      ></ins>
+      <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+      </script>
       <!-- <hr/> -->
       <div class="explanation">
         <h2>Frequently asked questions</h2>
